// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tab > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="styles__1xz9hlg7"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        />
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`tab > renders correctly with counter, badge and subtitle 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="styles__1xz9hlg7"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <span
            class="styles__1xz9hlg3 styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_neutral__1yf71jy7 styles_size_medium__1yf71jye styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu"
            style="--whiteSpace__qabug41: nowrap;"
          >
            1
          </span>
          <span
            class="styles__1xz9hlg6"
          >
            badge
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <span
            class="styles_default__1xz9hlg4 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_15__m4c9ow1u"
          >
            subtitle
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`tab > renders correctly with subtitle 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="styles__1xz9hlg7"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <span
            class="styles_default__1xz9hlg4 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_15__m4c9ow1u"
          >
            test
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
